--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="linkedin"><a href="https://in.linkedin.com/in/shubhajeet-pradhan-b7747a156">
                     <i class="fa fa-linkedin"></i>
                     <span>
-                        <h3>shubhajeet_12</h3>
+                        <h3>Shubhajeet Pradhan</h3>
                     </span>
                 </a></li>
                 <li class="facebook"><a href="https://www.facebook.com/shubhojeet.pradhan/">
